  . Added support for namespaces. (Dmitry, Stas, Gregory)
  . Added support for Late Static Binding. (Dmitry, Etienne Kneuss)
  . Added support for __callstatic() magic method. (Sara)
  . Added support for dynamic access of static members using $foo::myFunc().
    (Etienne Kneuss)
  . Improved checks for callbacks. (Marcus)
  . Added __DIR__ constant. (Lars Strojny)

- Added new date/time functionality: (Derick)
  . date_parse_from_format(): Parse date/time strings according to a format.
  . date_create_from_format()/DateTime::createFromFormat(): Create a date/time
    object by parsing a date/time string according to a given format.
  . date_get_last_errors()/DateTime::getLastErrors(): Return a list of warnings
    and errors that were found while parsing a date/time string through:
    . strtotime() / new DateTime
    . date_create_from_format() / DateTime::createFromFormat()
    . date_parse_from_format()
  . support for abbreviation and offset based timezone specifiers for
    DateTime::getOffset() and DateTime::getName().
  . support for selectively listing timezone identifiers through
    timezone_identifiers_list() / DateTimezone::listIdentifiers().
  . date_timestamp_set() / DateTime::setTimestamp() to set a Unix timestamp
    without invoking the date parser. (Scott)
  . date_timestamp_get() / DateTime::getTimestamp() to retrieve the Unix
    timestamp belonging to a date object.
  . two optional parameters to timezone_transitions_get() /
    DateTimeZone::getTranstions() to limit the range of transitions being
    returned.
  . support for "first/last day of <month>" style texts.
- Added functionality to SPL extension:
  . Added ability to store associative information with objects in
    SplObjectStorage. (Marcus)
  . Added ArrayAccess support to SplObjectStorage. (Marcus)
  . Added SplDoublyLinkedList, SplStack, SplQueue classes. (Etienne)
  . Added FilesystemIterator. (Marcus)
  . Added GlobIterator. (Marcus)